--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ php:
   - '7.0'
 
 before_script:
-  - sudo apt-get update && sudo apt-get install -my software-properties-common && sudo add-apt-repository ppa:ondrej/php
+  - sudo apt-get update && sudo apt-get install -my software-properties-common && sudo add-apt-repository -y ppa:ondrej/php
   - sudo apt-get update
   - sudo apt-get install php-mongodb
   - make deps
