--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,9 @@ php:
   - '7.0'
 
 before_script:
-  - sudo apt-get update && sudo apt-get install -my software-properties-common && sudo add-apt-repository -y ppa:ondrej/php
+#  - sudo apt-get update && sudo apt-get install -my software-properties-common && sudo add-apt-repository -y ppa:ondrej/php
   - sudo apt-get update
-  - sudo apt-get install php-mongodb
-  - make deps
+#  - sudo apt-get install php-mongodb
+   - echo "extension = mongodb.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
+#  - make deps
 
