--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,12 @@
         "mongodb/mongodb": "^1.0"
     },    
     "require-dev": {
-        "phpunit/phpunit": "5.5.*"
+        "phpunit/phpunit": "^6.5"
     },
     "autoload": {
         "psr-4": { "Mapmon\\": "src" }
+    },
+    "config": {
+        "bin-dir": "bin"
     }
 }
