--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,22 @@
-
 language: php
+
 php:
-  - '7.0'
+  - 7.0
 
-before_script:
-#  - sudo apt-get update && sudo apt-get install -my software-properties-common && sudo add-apt-repository -y ppa:ondrej/php
-#  - sudo apt-get update
-#  - sudo apt-get install php-mongodb
-  - sudo apt-get install php-mbstring php-xdebug
-  - echo "extension = mongodb.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
-  - composer install
+sudo: false
 
-script:
-  - make test
+cache:
+  directories:
+    - $HOME/.composer/cache
 
-#after_script:
-#  - php vendor/bin/coveralls -v
+services:
+  - mongodb
+
+before_install:
+    - echo "extension = mongodb.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
+
+install:
+    - composer install
 
 notifications:
   email:
