--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "mongodb/mongodb": "^1.0"
     },    
     "require-dev": {
-        "phpunit/phpunit": "^6.5"
+        "phpunit/phpunit": "^6.5",
+        "satooshi/php-coveralls": "dev-master"
     },
     "autoload": {
         "psr-4": { "Mapmon\\": "src" }
