--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,7 @@
         "mongodb/mongodb": "^1.0"
     },    
     "require-dev": {
-        "phpunit/phpunit": "^6.5",
-        "satooshi/php-coveralls": "dev-master"
+        "phpunit/phpunit": "^6.5"
     },
     "autoload": {
         "psr-4": { "Mapmon\\": "src" }
